[project]
name = "cyberknight-pdf-renderer"
version = "1.0.0"
description = "Rosé Pine themed PDF report generator from Markdown — print-ready, letter-size, JetBrains Mono"
requires-python = ">=3.12"
authors = [
    { name = "Cyberknight Websites" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "weasyprint>=63",
    "mistune>=3.1",
    "jinja2>=3.1",
]

[project.scripts]
cyberknight-pdf-render = "renderer.cli:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
renderer = ["template.html", "fonts/*.ttf"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
